# agentrun-sdk-python

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  coverage.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release-test.yml  release.yml
agentrun/: __init__.py
agentrun/agent_runtime/: __endpoint_async_template.py  endpoint.py
agentrun/credential/: model.py
agentrun/integration/agentscope/: __init__.py  builtin.py  model_adapter.py  tool_adapter.py
agentrun/integration/builtin/: __init__.py  knowledgebase.py  model.py  sandbox.py
agentrun/integration/crewai/: __init__.py  builtin.py  model_adapter.py
agentrun/integration/google_adk/: __init__.py  builtin.py  model_adapter.py  tool_adapter.py
agentrun/integration/langchain/: __init__.py  builtin.py  model_adapter.py
agentrun/integration/langgraph/: __init__.py  agent_converter.py  builtin.py
agentrun/integration/pydantic_ai/: __init__.py  builtin.py  model_adapter.py
agentrun/integration/utils/: adapter.py  canonical.py  model.py  tool.py
agentrun/knowledgebase/: __client_async_template.py  __init__.py  __knowledgebase_async_template.py  client.py  knowledgebase.py  model.py
agentrun/knowledgebase/api/: __data_async_template.py  __init__.py  control.py  data.py
agentrun/memory_collection/: __client_async_template.py  __init__.py  __memory_collection_async_template.py  client.py  memory_collection.py  model.py
agentrun/memory_collection/api/: __init__.py  control.py
agentrun/model/: __init__.py  __model_proxy_async_template.py  __model_service_async_template.py  model.py  model_proxy.py  model_service.py
agentrun/model/api/: data.py  model_api.py
agentrun/sandbox/: README.md  README_zh.md  __aio_sandbox_async_template.py  __browser_sandbox_async_template.py  __code_interpreter_sandbox_async_template.py  __init__.py  __sandbox_async_template.py  aio_sandbox.py  browser_sandbox.py  code_interpreter_sandbox.py  model.py  sandbox.py
agentrun/sandbox/api/: __aio_data_async_template.py  __init__.py  aio_data.py
agentrun/server/: __init__.py  agui_normalizer.py  agui_protocol.py  invoker.py  model.py  openai_protocol.py  protocol.py  server.py
agentrun/toolset/: model.py  toolset.py
agentrun/toolset/api/: openapi.py
agentrun/utils/: __data_api_async_template.py  config.py  control_api.py  data_api.py  exception.py  helper.py
codegen/configs/: knowledgebase_control_api.yaml  memory_collection_control_api.yaml
examples/: agent_runtime.py  embedding.py  knowledgebase.py  memory_collection_example.py  model.py  quick_start.py  sandbox.py
scripts/: check_coverage.py
tests/e2e/: __test_model_async_template.py  __test_sandbox_aio_async_template.py  __test_sandbox_template_async_template.py  test_model.py  test_sandbox_aio.py  test_sandbox_template.py
tests/e2e/integration/langchain/: test_agent_invoke_methods.py
tests/unittests/agent_runtime/: test_endpoint.py
tests/unittests/integration/: __init__.py  base.py  conftest.py  mock_llm_server.py  scenarios.py  test_adapter.py  test_agent_converter.py  test_agentscope.py  test_crewai.py  test_google_adk.py  test_integration.py  test_langchain.py  test_langchain_agui_integration.py  test_langchain_convert.py  test_langgraph.py  test_langgraph_events.py  test_langgraph_to_agent_event.py  test_pydanticai.py  test_toolname_normalize.py
tests/unittests/memory_collection/: __init__.py  test_client.py  test_memory_collection.py  test_model.py
tests/unittests/model/: test_model_proxy.py
tests/unittests/server/: test_agui_event_sequence.py  test_agui_normalizer.py  test_agui_protocol.py  test_invoker.py  test_invoker_extended.py  test_openai_protocol.py  test_protocol.py  test_server.py  test_server_extended.py
tests/unittests/toolset/api/: __init__.py  test_openapi.py
tests/unittests/utils/: test_helper.py
